--- a/jupyter-BCD.ipynb
+++ b/jupyter-BCD.ipynb
@@ -1673,14 +1673,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df230a76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "id": "a9c77334",
    "metadata": {},
@@ -1700,12 +1692,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58e82ad7",
+   "metadata": {},
+   "source": [
+    "Predective Mechanism"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "61246178",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input1=np.array([12,15.65,76.95,443.3,0.09723,0.07165,0.04151,0.01863,0.2079,0.05968,0.2271,1.255,1.441,16.16,0.005969,0.01812,0.02007,0.007027,0.01972,0.002607,13.67,24.9,87.78,567.9,0.1377,0.2003,0.2267,0.07632,0.3379,0.07924]).reshape(1,-1)\n",
+    "input2=np.array([17.01,20.26,109.7,904.3,0.08772,0.07304,0.0695,0.0539,0.2026,0.05223,0.5858,0.8554,4.106,68.46,0.005038,0.01503,0.01946,0.01123,0.02294,0.002581,19.8,25.05,130,1210,0.1111,0.1486,0.1932,0.1096,0.3275,0.06469]).reshape(1,-1)\n",
+    "\n",
+    "pred1=Model.predict(input1)\n",
+    "pred2=Model.predict(input2)\n",
+    "\n",
+    "print(pred1) #0\n",
+    "print(pred2) #1"
+   ]
   }
  ],
  "metadata": {
