--- a/notebooks/jupyter-BCD.ipynb
+++ b/notebooks/jupyter-BCD.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "71dcf9b2",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "Cancer_Data=pd.read_csv('cancer.csv')\n",
+    "Cancer_Data=pd.read_csv('../data/cancer.csv')\n",
     "Cancer_Data.head()"
    ]
   },
